# BadNorthSaveModifier

./: Cargo.toml  LICENSE  README.md
src/: class_dictionary.rs  hero_editor.rs  lib.rs  main.rs  models.rs  save_manager.rs  settings.rs  upgrade_dictionary.rs
src/ui/: mod.rs  styles.rs
src/ui/components/: file_selector.rs  hero_list.rs  mod.rs  toolbar.rs
